fix(ARC-1114): fix labels coming out of container

--- a/ui/src/react-admin/modules/content-page/views/ContentPageEdit.scss
+++ b/ui/src/react-admin/modules/content-page/views/ContentPageEdit.scss
@@ -20,6 +20,7 @@ $content-top-bar-and-tabs-height: 113px;
 			.c-select__control {
 				border: 1px solid #25a4cf;
 				background-color: #25a4cf;
+				overflow: hidden;
 
 				.c-select__single-value,
 				svg {
