--- a/ui/src/react-admin/modules/shared/components/FileUpload/FileUpload.scss
+++ b/ui/src/react-admin/modules/shared/components/FileUpload/FileUpload.scss
@@ -27,6 +27,7 @@
 
 	.c-file-upload-button-and-input {
 		position: relative;
+		min-height: 50px;
 
 		&:hover .c-button {
 			background-color: #FFF;
